Changes for 1.1beta1:

 - group functions for item manipulations (Alexei)
 - changes umask(0) to umask(022) to prevent world-wrtie access (Alexei)
 - updated fs.file.md5sum and fs.file.cksum (Alexei)
 - misc usability fixes for PHP interface (Alexei)
 - updated system.uname, system.uptime, system.users.num (Alexei)
 - parameter system[uptime] renamed to system.uptime[] (Alexei)
 - added parameter fs.file.atime[] (Alexei)
 - added parameter fs.file.ctime[] (Alexei)
 - added parameter fs.file.mtime[] (Alexei)
 - parameter isfile[] renamed to fs.file.exists[] (Alexei)
 - parameter filesize[] renamed to fs.file.size[] (Alexei)
 - added parameter system.localtime (Alexei)
 - parameter Hostname is optional. If not specified, hostname is used. (Alexei)
 - fixed processing of W32 performance counters. Problem with long computer names. (Alexei)
 - fixed crash of WIN32 agent when processing eventlog[]. Many thanks to Simon Lund. (Alexei)
 - fixed update of triggers in certain situations (Alexei)
 - French translation (Alexei)
 - German translation. Thanks to J. Pawlowski (Alexei)

Changes for 1.1alpha12:

 - time-related functions will be calculated regardless of host status (Alexei)
 - added support of hosts profiles (Alexei)
 - column history_log.value altered to TEXT (Alexei)
 - fixed zabbix_get to correctly parse command line parameters (Alexei)
 - fixed compilation issues (hstrerror) under Solaris (Alexei)
 - added column history_log.severity (Alexei)
 - added column history_log.source (Alexei)
 - added column history_log.timestamp (Alexei)
 - support of monitoring of W32 Event Logs: eventlog[Applications/Security/System] (Alexei)
 - Italian translation (Alexei)
 - Spanish translation (Alexei)
 - fixed compilation of inodes.c under *BSD (Alexei)
 - support of option --enable-agent (Alexei)
 - support of all types of SNMP metrics (Alexei)
 - fixed src/zabbix_server/Makefile.am for SNMP-enabled compilation (Alexei)

Changes for 1.1alpha11:
